# ogltest

./: .gitignore  CMakeLists.txt  GLFWapp.cpp  GLFWapp.hpp  GLFWcontext.cpp  GLFWcontext.hpp  IEntity.cpp  IEntity.hpp  IGLapp.cpp  IGLapp.hpp  MyGLapp.cpp  MyGLapp.hpp  OGL_main.cpp  OGLapp.hpp  Penguin.cpp  Penguin.hpp  Rectangle.cpp  Rectangle.hpp  main.cpp  test.cpp
GLP/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  GLtypes.hpp  IVertexArrayLayout.cpp  IVertexArrayLayout.hpp  Program.cpp  Program.hpp  Renderer.cpp  Renderer.hpp  ScopedDebug.cpp  ScopedDebug.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Uniform.hpp  Uniform4f.cpp  Uniform4f.hpp  VertexArray.cpp  VertexArray.hpp  debug.cpp  debug.hpp
GLP/Uniforms/: IUniform.cpp  IUniform.hpp  Uniform1i.cpp  Uniform1i.hpp  Uniform4f.cpp  Uniform4f.hpp
src/shaders/Rectangle/: vert.vs
src/shaders/Texture/: frag.fs  vert.vs
